# crewai-sandbox

./: .env.example  01_requirements_analysis.md  02_system_architecture.md  03_backend_implementation.md  04_frontend_implementation.md  05_quality_assurance.md  06_deployment_setup.md  README.md  pyproject.toml  report.md
src/crew_ai_sandbox/: crew.py  main.py
src/crew_ai_sandbox/config/: agents.yaml  tasks.yaml
