[project]
name = "crew_ai_sandbox"
version = "0.1.0"
description = "crew-ai-sandbox using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
crew_ai_sandbox = "crew_ai_sandbox.main:run"
run_crew = "crew_ai_sandbox.main:run"
train = "crew_ai_sandbox.main:train"
replay = "crew_ai_sandbox.main:replay"
test = "crew_ai_sandbox.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
